render: Minor CSS fixes to non-AMP thumbnail images.
Use height/min-height and width/min-width rather than
max-height and max-width, since potrait images weren't
getting vertically stretched to cover otherwise.

Also make real images relatively-positioned, as they could
be rendered under the thumbnails otherwise.

Reduce the minimum image size for thumbnailing down to
100x100, too.

--- a/render/inline/nonamp.scss
+++ b/render/inline/nonamp.scss
@@ -3,12 +3,16 @@
   overflow: hidden; // clip blurred thumbnail
   position: relative; // needed since thumbnail is absolute
   width: fit-content; // <figure> can make us bigger otherwise
-  & > img:first-child {
+  & > img { // thumbnail
     filter: blur(12px); // avoid ugly linear interpolation
-    max-height: 100%; // override intrinsic aspect ratio
-    max-width: 100%;
+    height: 100%; // seems to be needed to override intrinsic aspect ratio
+    min-height: 100%;
+    min-width: 100%;
     position: absolute; // same position as real image
     transform: scale(1.1); // avoid blurry borders
-    z-index: -1; // draw under real image
+    width: 100%;
+  }
+  & > picture { // real image
+    position: relative; // draw over thumbnail
   }
 }
